fix footer formatting

--- a/index.html
+++ b/index.html
@@ -596,41 +596,29 @@
 
     <footer id="footer" class="footerhome">
       <ul id="footer-content">
-        <li>
-          <h4 style="text-align: center; margin-bottom: -20px">
-            Digitale Kabelradio
-          </h4>
-          <div style="margin-top: 12px">
-            <div class="footercol">
-              <div class="footercolumn">
-                <div style="text-align: left; margin-left: 45px">
-                  KPN: 1015<br />Solcon: 1215<br />T-mobile: 2086
-                </div>
-              </div>
-
-              <div class="footercolumn">
-                <div style="text-align: right; margin-right: 45px">
-                  XS4ALL: 1015<br />Ziggo: 912
-                </div>
-              </div>
-            </div>
-          </div>
+        <li id="kabelradio">
+          <h4 style="text-align: center">Digitale Kabelradio</h4>
+          <ul id="kabelradio-lijst">
+            <li>KPN: 1015</li>
+            <li>XS4ALL: 1015</li>
+            <li>Solcon: 1215</li>
+            <li>Ziggo: 912</li>
+            <li>T-mobile: 2086</li>
+          </ul>
         </li>
 
         <li>
-          <h4 style="text-align: center; margin-bottom: -20px">FM</h4>
+          <h4 style="text-align: center">FM</h4>
           <a style="text-align: center">107,3 MHz</a>
         </li>
 
         <li>
-          <h4 style="text-align: center; margin-bottom: -20px">DAB+</h4>
+          <h4 style="text-align: center">DAB+</h4>
           <a style="text-align: center">Kanaal 5A (174,928 MHz)</a>
         </li>
 
         <li>
-          <h4 style="text-align: center; margin-bottom: -20px">
-            Online Stream
-          </h4>
+          <h4 style="text-align: center">Online Stream</h4>
           <a href="https://omroepede.nl/radio/" style="text-align: center"
             >https://omroepede.nl/radio/</a
           >
@@ -638,32 +626,23 @@
 
         <li class="social-link">
           <a href="https://www.facebook.com/djkessie/" class="">
-            <img
-              src="./assets/img/icons/iconfacebookgroot.png"
-              style="margin-bottom: -17px"
-            />
-            Facebook</a
-          >
+            <img src="./assets/img/icons/iconfacebookgroot.png" />
+            <span>Facebook</span>
+          </a>
         </li>
 
         <li class="social-link">
           <a href="https://www.instagram.com/dancex.rtvrijnstreek/" class="">
-            <img
-              src="./assets/img/icons/iconinstagramgroot.png"
-              style="margin-bottom: -17px"
-            />
-            Instagram</a
-          >
+            <img src="./assets/img/icons/iconinstagramgroot.png" />
+            <span>Instagram</span>
+          </a>
         </li>
 
         <li class="social-link">
           <a href="https://omroepede.nl/" class="">
-            <img
-              src="./assets/img/icons/iconedefm.png"
-              style="margin-bottom: -17px"
-            />
-            Omroep Ede</a
-          >
+            <img src="./assets/img/icons/iconedefm.png" />
+            <span>Omroep Ede</span>
+          </a>
         </li>
       </ul>
     </footer>
