--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html class="websitemargin">
+<html lang="en">
   <link rel="stylesheet" href="index.css" />
 
   <head>
     <title>Dance Xperience</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
 
   <body>
@@ -52,7 +55,7 @@
       </div>
 
       <div>
-        <h3 style="margin-bottom: 5px"><span id="aboutme"></span>Over Ons</h3>
+        <h1 style="margin-bottom: 5px"><span id="aboutme"></span>Over Ons</h1>
         Wij zijn Ap (DJ Kessie) en Joshua (Sidekick). We zijn samen begonnen met
         DanceXperience aan het einde van 2019.
 
@@ -122,7 +125,7 @@
       banaan <br /><br />
 
       <div>
-        <h3><span id="contact"></span>Neem contact op</h3>
+        <h1><span id="contact"></span>Neem contact op</h1>
         <a href="mailto:aanmelden@dancex.nl">Aanmelden als gast</a><br />
         <a href="mailto:mix@dancex.nl">Opleveren mix</a>
       </div>
@@ -156,7 +159,21 @@
       banaan <br /><br />
 
       <div style="margin-bottom: 50px">
-        <h3><span id="vrienden"></span>Vrienden van DanceXperience</h3>
+        <h1 style="margin-bottom: 10px;"><span id="vrienden"></span>Vrienden van DanceXperience</h1>
+        <div style="margin-bottom: 60px;">
+          DanceXperience is over de jaren heen voor ons meer geworden dan alleen een radio show.<br>
+          <em>Voor ons is DanceXperience een familie.</em><br><br>
+  
+          Studio gasten zien we dan ook niet alleen als gasten, maar ook als vrienden van de show.<br>
+          Zo hebben we nauwe banden met onze gasten opgebouwd en blijven we altijd in contact na een uitzending om de artiesten te volgen.<br><br>
+  
+          Hieronder hebben we een lijst opgesteld met artiesten die in onze uitzendingen voorgekomen zijn.<br>
+          Er zit sterk talent tussen deze artiesten.<br><br>
+
+          Vanuit DanceXperience zouden we het leuk vinden als jullie deze artiesten een kans zouden willen geven.<br>
+          Bijgevoegd bij elke artiest zijn hun social pages, zeker volgen!
+        </div>
+
 
         <div class="vriendencol">
           <div class="vriendencolumn">
@@ -362,6 +379,58 @@
 
           <div class="vriendencolumn">
             <div class="vriendenfotosborder">
+              <h4>Lowice</h4>
+              <br />
+              <img
+                src="./assets/img/vrienden/lowice.jpg"
+                class="vriendenfotos"
+              />
+              <br />
+
+              <a href="https://www.lowice.nl/" style="position: relative; z-index: 10">
+                <img
+                  src="./assets/img/icons/iconinternet.png"
+                  style="width: 20px; margin-bottom: -3.5px"
+                />
+                Website</a
+              ><br />
+
+              <a href="https://open.spotify.com/artist/4pcaHsrePnSuHSQOGPXMh4/" style="position: relative; z-index: 10">
+                <img
+                  src="./assets/img/icons/iconspotify.png"
+                  style="width: 20px; margin-bottom: -3.5px"
+                />
+                Spotify</a
+              ><br />
+
+              <a href="https://www.facebook.com/Lowice.official" style="position: relative; z-index: 10">
+                <img
+                  src="./assets/img/icons/iconfacebook.png"
+                  style="width: 20px; margin-bottom: -3.5px"
+                />
+                Facebook</a
+              ><br />
+
+              <a href="https://www.instagram.com/lowice_official/" style="position: relative; z-index: 10">
+                <img
+                  src="./assets/img/icons/iconinstagram.png"
+                  style="width: 20px; margin-bottom: -3.5px"
+                />
+                Instagram</a
+              ><br />
+
+              <a href="https://www.youtube.com/channel/UCcTNVQzpueMh8yi8mSA9qjA" style="position: relative; z-index: 10">
+                <img
+                  src="./assets/img/icons/iconyoutube.png"
+                  style="width: 20px; margin-bottom: -3.5px"
+                />
+                Youtube</a
+              ><br />
+            </div>
+          </div>
+
+          <div class="vriendencolumn">
+            <div class="vriendenfotosborder">
               <h4>Twan Lammers</h4>
               <br />
               <img
@@ -474,108 +543,77 @@
               ><br />
             </div>
           </div>
-
-          <div class="vriendencolumn">
-            <div class="vriendenfotosborder">
-              <h4>Artiest</h4>
-              <br />
-              <img
-                src="./assets/img/vrienden/nopicture.jpg"
-                class="vriendenfotos"
-              />
-              <br />
-
-              <a href="" style="position: relative; z-index: 10">
-                <img
-                  src="./assets/img/icons/iconinternet.png"
-                  style="width: 20px; margin-bottom: -3.5px"
-                />
-                Website</a
-              ><br />
-
-              <a href="" style="position: relative; z-index: 10">
-                <img
-                  src="./assets/img/icons/iconspotify.png"
-                  style="width: 20px; margin-bottom: -3.5px"
-                />
-                Spotify</a
-              ><br />
-
-              <a href="" style="position: relative; z-index: 10">
-                <img
-                  src="./assets/img/icons/iconfacebook.png"
-                  style="width: 20px; margin-bottom: -3.5px"
-                />
-                Facebook</a
-              ><br />
-
-              <a href="" style="position: relative; z-index: 10">
-                <img
-                  src="./assets/img/icons/iconinstagram.png"
-                  style="width: 20px; margin-bottom: -3.5px"
-                />
-                Instagram</a
-              ><br />
-
-              <a href="" style="position: relative; z-index: 10">
-                <img
-                  src="./assets/img/icons/iconyoutube.png"
-                  style="width: 20px; margin-bottom: -3.5px"
-                />
-                Youtube</a
-              ><br />
-            </div>
-          </div>
         </div>
       </div>
 
-      <div
-        style="
-          margin-left: 12.5%;
-          width: 75%;
-          border: solid #363636 5px;
-          background-color: white;
-          border-radius: 10px;
+      <h1 style="margin-bottom: 10px;"><span id="fotoboek"></span>Fotoboek</h1>
+
+      <div style=
+        "
+        margin-left: 12.5%;
+        width: 75%;
+        border: solid #363636 5px;
+        background-color: white;
+        border-radius: 10px;
         "
       >
-        <h3><span id="fotoboek"></span>Fotoboek</h3>
+      <h3><span></span></h3>
 
         <div class="slideshow-container">
           <!-- Full-width images with number and caption text -->
           <div class="mySlides fade">
-            <div class="numbertext">1 / 4</div>
+
             <img
-              src="./assets/img/fotoboek/img1.jpg"
-              style="height: 500px; width: auto; margin-bottom: 30px"
+              src="./assets/img/fotoboek/joshuaenbart.jpg"
+              style="height: 550px; width: auto; margin-bottom: 30px"
             />
-            <div class="text">Eerste banaan</div>
+            <div class="numbertext">1 / 6</div>
+            <div class="text">Interview met Bart Zeal</div>
           </div>
 
           <div class="mySlides fade">
-            <div class="numbertext">2 / 4</div>
+            <div class="numbertext">2 / 6</div>
             <img
-              src="./assets/img/fotoboek/img2.jpg"
-              style="height: 500px; width: auto; margin-bottom: 30px"
+              src="./assets/img/fotoboek/welovethe90s.jpg"
+              style="height: 550px; width: auto; margin-bottom: 30px"
             />
-            <div class="text">Tweede banaan</div>
+            <div class="text">We Love The 90s met Lowice</div>
           </div>
 
           <div class="mySlides fade">
-            <div class="numbertext">3 / 4</div>
+            <div class="numbertext">3 / 6</div>
             <img
-              src="./assets/img/fotoboek/img3.jpg"
-              style="height: 500px; width: auto; margin-bottom: 30px"
+              src="./assets/img/fotoboek/radiomaken.jpg"
+              style="height: 550px; width: auto; margin-bottom: 30px"
             />
-            <div class="text">Derde banaan</div>
+            <div class="text">Een dag in de studio</div>
           </div>
 
           <div class="mySlides fade">
-            <div class="numbertext">4 / 4</div>
+            <div class="numbertext">4 / 6</div>
             <img
-              src="./assets/img/fotoboek/img4.jpg"
-              style="height: 500px; width: auto; margin-bottom: 30px"
+              src="./assets/img/fotoboek/interviewjonesysings.jpg"
+              style="height: 550px; width: auto; margin-bottom: 30px"
             />
-            <div class="text">Vierde banaan</div>
+            <div class="text">Interview met Jonesy Sings</div>
+          </div>
+
+          <div class="mySlides fade">
+            <div class="numbertext">5 / 6</div>
+            <img
+              src="./assets/img/fotoboek/jonesysings.jpg"
+              style="height: 550px; width: auto; margin-bottom: 30px"
+            />
+            <div class="text">Live optreden Jonesy Sings</div>
+          </div>
+
+          <div class="mySlides fade">
+            <div class="numbertext">6 / 6</div>
+            <img
+              src="./assets/img/fotoboek/apentok.jpg"
+              style="height: 550px; width: auto; margin-bottom: 30px"
+            />
+            <div class="text">Onze eerste gasten, T.O.K!</div>
           </div>
 
           <!-- Next and previous buttons -->
@@ -590,6 +628,8 @@
           <span class="dot" onclick="currentSlide(2)"></span>
           <span class="dot" onclick="currentSlide(3)"></span>
           <span class="dot" onclick="currentSlide(4)"></span>
+          <span class="dot" onclick="currentSlide(5)"></span>
+          <span class="dot" onclick="currentSlide(6)"></span>
         </div>
       </div>
     </main>
